# UseTrack

./: .gitignore  CHANGELOG.md  CLAUDE.md  Package.swift  README.md  claude-progress.txt  feature_list.json  init.sh
.claude/: settings.json
.claude/commands/: continue.md  status.md  wrapup.md
.githooks/: pre-commit
Sources/UseTrackCollector/: TrackingEngine.swift  UseTrackCollector.swift
Sources/UseTrackCollector/Attention/: AttentionScorer.swift  MouseTracker.swift  ScreenDetector.swift
Sources/UseTrackCollector/Models/: ActivityEvent.swift  AttentionState.swift  WindowSnapshot.swift
Sources/UseTrackCollector/Storage/: DatabaseManager.swift
Sources/UseTrackCollector/Watchers/: AFKWatcher.swift  AISessionWatcher.swift  AppWatcher.swift  BrowserURLWatcher.swift  DisplayWatcher.swift  GitWatcher.swift  InputWatcher.swift  ObsidianWatcher.swift  (+1 more)
Sources/UseTrackMenuBar/: AppearanceManager.swift  StatusView.swift  StatusViewModel.swift  main.swift
Tests/UseTrackCollectorTests/: AppWatcherTests.swift
assets/: AppIcon.icns
browser-extension/: README.md  background.js  manifest.json
config/: com.usetrack.collector.plist  com.usetrack.daily-report.plist  com.usetrack.export.plist  com.usetrack.menubar.plist  install-menubar.sh  install.sh
db/: schema.sql
python/: pyproject.toml
python/src/usetrack/: __init__.py  analyzer.py  db.py  exporter.py  mcp_server.py  models.py  reporter.py  sync.py
python/tests/: test_analyzer.py  test_db.py  test_models.py  test_reporter.py  test_sync.py
scripts/: daily_discord_report.py  repair_app_durations.py
(+24 files in other folders)
