[project]
name = "usetrack"
version = "0.1.0"
description = "UseTrack MCP Server + AI Analyzer — macOS activity tracking analytics"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "anthropic>=0.40.0",
    "jinja2>=3.1.0",
]

[project.scripts]
usetrack-mcp = "usetrack.mcp_server:main"
usetrack-report = "usetrack.reporter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usetrack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/usetrack/reporter.py" = ["E501"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
